--- a/static/assets/css/admin.css
+++ b/static/assets/css/admin.css
@@ -40,9 +40,8 @@ body {
 .aside .profile .avatar {
   width: 80px;
   height: 80px;
-
   border: 3px solid rgba(255, 255, 255, .3);
-
+  border-radius: 50%;
   object-fit: cover;
 }
 
